# satmeta

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
satmeta/: __init__.py  _version.py  converters.py  logs.py
satmeta/dg/: meta.py  postprocessing.py
satmeta/l8/: parser.py  unzip.py
satmeta/pleiades/: meta.py  metafile.py  parser.py
satmeta/pneo/: meta.py  metafile.py  parser.py
satmeta/s1/: bookkeeping.py  filesearch.py  meta.py  metafile.py  to_geopandas.py
satmeta/s2/: angles.py  angles_2d.py  bands.py  meta.py  meta_old.py  metafile.py  unzip.py  utils.py
satmeta/scripts/: parsers.py
sentinel_meta/: __init__.py  converters.py  exceptions.py  s1meta.py
sentinel_meta/s1/: filesearch.py  meta.py  metafile.py
sentinel_meta/s2/: meta.py  metafile.py
sentinel_meta/scripts/: cli.py  filesearch.py  parsers.py
src/satmeta/: __init__.py  converters.py  utils.py
src/satmeta/l8/: meta.py  metafile.py  parser.py
src/satmeta/pleiades/: metafile.py  parser.py
src/satmeta/s1/: filesearch.py  meta.py  to_geopandas.py
tests/: test_s1_geopandas.py  test_s1meta.py  test_s2angles.py  test_s2granulemeta.py  test_s2meta.py  test_s2metafile.py
tests/dg/: test_meta.py
tests/l8/: test_meta.py  test_metafile.py  test_parser.py
tests/pleiades/: test_meta.py  test_metafile.py  test_parser.py
tests/s1/: conftest.py  test_bookkeeping.py  test_filesearch.py  test_geopandas.py  test_meta.py
tests/s2/: test_angles.py  test_angles_2d.py  test_granulemeta.py  test_meta.py  test_metafile.py
(+25 files in other folders)
